# oo-fastapi

./: .env  hello.py  pyproject.toml  ruff.toml
app/: main.py
app/core/: config.py  database.py  database_async.py  dependencies.py  logging.py  security.py
app/onlineordering/: models.py  router.py  schemas.py  services.py
app/user/: models.py  router.py  schemas.py  services.py
