[project]
name = "oo-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.121.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg>=3.3.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]
